# mini_llm_inference

./: .clang-tidy  CMakeLists.txt  README.md
src/: file.cpp  file.h  utils.cpp  utils.h
src/core/: device.cpp  device_cpu.cpp  device_cpu.h  tensor.cpp  tensor.h  thread_pool.cpp  thread_pool.h
src/core/device/: device.h  device_cpu.h
src/kern/: kernel.h  kernel_define.h
test/: CMakeLists.txt
